cmake_minimum_required(VERSION 3.24.1)
project("ABC#291")
set(CMAKE_CXX_STANDARD 20)
aux_source_directory(. problems)
foreach (var ${problems})
    string(LENGTH ${var} len)
    math(EXPR len "${len} - 6")
    string(SUBSTRING ${var} 2 ${len} target)
    message(${target})
    add_executable(${target} ${target}.cpp)
endforeach ()
